Code cleanup of warnings